# zephyr_app

./: .gitignore  404.html  CMakeLists.txt  Kconfig  README.laser.md  README.md  index.html  main.yml  mkdocs.yml  ruff.toml  sitemap.xml  west.yml  zephyr4_1.yml  zephyr4_2.yml  zephyr4_3.yml  zephyr4_4.yml  单点激光板测试.docx  固件升级.docx
.github/workflows/: docs.yml  laser_ctrl.yml  mod_handler.yml  release.yml
applications/canopen-demo/: index.html
applications/canopen_demo/: prj.conf
applications/dapLink/: CLAUDE.md  CMakeLists.txt  Kconfig  prj.conf
applications/data-collect/: index.html
applications/data_collect/: CMakeLists.txt  Kconfig  VERSION  prj.conf  sysbuild.conf
applications/data_collect/boards/: apollo_h743ii.conf  apollo_h743ii.overlay  daq_f407vet6.conf  daq_f407vet6.overlay  f407vet6_daq.overlay  stm32f407_daq.overlay
applications/data_collect/snippets/fatfs_flash/: fatfs_flash.conf  fatfs_flash.overlay  snippet.yml
applications/data_collect/snippets/ftp_server/: ftp_server.conf  snippet.yml
applications/data_collect/snippets/http_server/: http_server.conf  snippet.yml
applications/data_collect/snippets/imgmgr/: imgmgr.conf  snippet.yml
applications/data_collect/snippets/littlefs_flash/: littlefs_flash.conf  littlefs_flash.overlay  snippet.yml
applications/data_collect/snippets/shell_en/: shell_en.conf  snippet.yml
applications/data_collect/src/: fs.c  main.c  time.c
applications/data_collect/src/ftp_server/: CMakeLists.txt  ftp.h  ftp_cmds.c  ftp_handler.c  ftpd.c
applications/data_collect/src/http_server/: CMakeLists.txt  http_server.c  http_server.ld
applications/data_collect/src/http_server/resources/: a.html  index.html  main.js
applications/data_collect/src/modbus/: CMakeLists.txt  adc.c  dio.c  function.c  history.c  init.c  init.h  rtu.c  tcp.c  udp.c
applications/data_collect/sysbuild/: mcuboot.conf
applications/gateway/: CLAUDE.md  CMakeLists.txt  Kconfig  README.md  index.html  prj.conf  sysbuild.conf
applications/gateway/boards/: nrf24_f103rct6.conf  nrf24_f103rct6.overlay  rsa_mcuboot_2048.pem
applications/gateway/include/: gateway.h
applications/gateway/snippets/gateway_eth/: gateway_eth.conf  gateway_eth.overlay  snippet.yml
applications/gateway/src/: can_forward.c  config.c  fw_upgrade.c  main.c  persist.c  rf24.c  rf24_shell.c  udp.c  udp_forward.c  web_page.html  web_server.c
applications/laser-ctrl/: index.html
applications/laser_ctrl/: CMakeLists.txt  VERSION  prj.conf
applications/laser_ctrl/boards/: f407vet6_monv.overlay  laser_f103ret7.overlay  laser_stm32f103ret7.overlay  monv_f407vet6.overlay  native_sim_64.conf  native_sim_64.overlay  stm32f407_xinxin.overlay
applications/laser_ctrl/dts/bindings/: spi,laser.yaml
applications/laser_ctrl/include/: laser-can.h  laser-common.h  laser-flash.h  laser-rs485.h
applications/laser_ctrl/snippets/imgmgr-shell/: snippet.yml
applications/laser_ctrl/src/: can.c  firmware.c  flash.c  fpga_spi.c  laser-can.c  laser-flash.c  laser-process.c  laser-rs485.c  laser-spi.c  laser_serial.c  main.c  rs485.c
applications/laser_ctrl/sysbuild/: mcuboot.conf
applications/mod-handler/: index.html
applications/mod_handler/: CLAUDE.md  CMakeLists.txt  Kconfig  README.md  VERSION  app.overlay  prj.conf  sh1106_font_generator.py  sysbuild.conf
applications/mod_handler/boards/: lora_f103rct6.overlay  nrf24_f103rct6.overlay  rsa_mcuboot_2048.pem
applications/mod_handler/include/: battery_icons.h  common.h  display.h  label_icons.h  lora.h  mod-can.h  mod-gpio.h  persist.h  power.h  rf24.h  signal_icons.h
applications/mod_handler/loralib/: CMakeLists.txt  README.md  crc16.c  crc16.h  lora_sdk.c  lora_sdk.h  lora_sdk_internal.h  lora_sdk_net.c  lora_sdk_tcp.c  lora_sdk_udp.c  toolchain-mingw64.cmake
applications/mod_handler/loralib/examples/: CMakeLists.txt  example.c
applications/mod_handler/scripts/: lora_gateway_sim.py
applications/mod_handler/src/: adc.c  battery.c  can.c  common.c  display.c  firmware.c  font_5x8.c  font_8x16.c  gpio.c  lora.c  main.c  mod_handler.c  persist.c  power.c  rf24.c  rf24_shell.c
applications/mod_handler/tools/: .gitignore  CMakeLists.txt  README.md  lora_gateway_sim.py  lora_gateway_tool.c  lora_net.c  lora_net.h  lora_tcp.c  lora_tcp.py  lora_udp.c
applications/mod_handler/tools/resources/: app.manifest  app.rc
applications/nrf24l01p_demo/: CMakeLists.txt  Kconfig  README.md  main.c  prj.conf
applications/spi-demo/: index.html
applications/stm32_bootloader/: CMakeLists.txt  README.md  prj.conf
applications/zephyrlink/: index.html
architecture/: index.html
boards/: index.html
boards/apollo_h743ii/: Kconfig.apollo_h743ii  Kconfig.defconfig  apollo_h743ii.dts  apollo_h743ii.yaml  apollo_h743ii_defconfig  board.cmake  board.yml  rsa_mcuboot_2048.pem  stm32f767ig.dtsi
boards/f407vet6/: board.yml  (+4 more)
build-flash/: index.html
can_flash/: index.html
changelog/: index.html
docs/: architecture.md  blog.md  boards.md  build-flash.md  can_flash.md  changelog.md  dts.md  ftp_download.md  getting-started.md  index.md  net.md  resources.md  setup_windows.md  刷机.docx  单点激光板测试.docx
drivers/: CMakeLists.txt  Kconfig
dts/: index.html  stm32f407_fsmc.dtsi
ftp_download/: index.html
getting-started/: index.html
libs/: CMakeLists.txt  Kconfig  lib_shell.c
net/: index.html
patches/: 0001-mcuboot-support-udp-upgrade.patch  0001-serail-data-bit-8-stopbit-1-parity-even.patch  zephyr_f407-fsmc-issue.patch  zephyr_serail-data-bit-7-stopbit-1-parity-even.patch
resources/: index.html
scripts/: sync_docs.sh  west-commands.yml
search/: search_index.json
setup_windows/: index.html
stylesheets/: extra.css
tools/: apply_patches.py  apply_patches.sh  can_upgrade.py  can_upgrade_cli.py  can_upgrade_new.py  export_images.py  export_img.sh  flash_f407.sh  flash_h743.sh  gen_app.sh  laser.py  mcu_patch.sh  parser_raw.py  setup_win.ps1  smp_upload.py  udp_multi_getinfo.py  udp_multi_setinfo.py
zephyr/: module.yml  patches.yml  requirements.txt
(+141 files in other folders)
